--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "9. Node.js Challenge: Professional README Generator",
   "main": "index.js",
   "scripts": {
     "test": "node index.js"
@@ -9,6 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sambollano/README-Generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sambollano/README-Generator/issues"
+  },
+  "homepage": "https://github.com/sambollano/README-Generator#readme"
 }
