--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "bugs": {
     "url": "https://github.com/sambollano/README-Generator/issues"
   },
-  "homepage": "https://github.com/sambollano/README-Generator#readme"
+  "homepage": "https://github.com/sambollano/README-Generator#readme",
+  "keywords": []
 }
